# daily_stock_analysis

./: pyproject.toml  railway.toml  vercel.json
api/: index.py  requirements.txt
docker/: Dockerfile
docs/: DEPLOY_VERCEL.md
src/: config.py
src/core/: pipeline.py
